# pre-commit-prepend-jira-issue

./: .pre-commit-hooks.yaml  LICENSE  README.md  dev-requirements.txt  prepend_jira_issue.py  prepend_jira_ticket.py  pyproject.toml  requirements.txt  setup.py  test_prepend_jira_ticket.py
.github/workflows/: test.yml
